--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import "./assets/font/font.css";
+@import "./assets/variables.scss";
+
+body {
+    font-family: 'Inter';
+    color: var(--text);
+    background-color: var(--background);
+}
