--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,3 +1,3 @@
-<div class="flex gap-8 overflow-x-hidden max-w-full py-1 px-8">
+<div class="flex gap-8 overflow-x-hidden max-w-full">
     <ng-content></ng-content>
 </div>
