--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,8 @@
 @import "./assets/variables.scss";
 
 body {
-    font-family: 'Inter';
+    font-family: 'Inter', 'MoBe Sans';
     color: var(--text);
     background-color: var(--background);
+    margin: 54px 0;
 }
