--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -3,8 +3,10 @@
         <h2 class="text-4xl mb-4">Exit</h2>
         <p class="mb-10">Are you sure you want to close the app?</p>
         <div class="flex justify-between">
-            <button class="appearance-none bg-neutral-950 rounded-lg text-white p-4 min-w-40">Yes</button>
-            <button class="appearance-none bg-neutral-200 rounded-lg p-4 min-w-40">No</button>
+            <button class="appearance-none rounded-lg p-4 min-w-40"
+                [ngClass]="activeButtonIndex === 0 ? 'text-white bg-neutral-950' : 'bg-neutral-200'">Yes</button>
+            <button class="appearance-none rounded-lg p-4 min-w-40"
+                [ngClass]="activeButtonIndex === 1 ? 'text-white bg-neutral-950' : 'bg-neutral-200'">No</button>
         </div>
     </div>
 </div>
