--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
-<main class="py-8">
-  <app-slider [componentFocused]="!modalService.getModalState()">
+<main class="flex flex-col gap-10 py-8">
+  <app-slider [componentFocused]="navigationService.trackFocusPosition('slider-01')">
+    <app-card title="Shadow Hunter" image="https://picsum.photos/800/440" />
+    <app-card title="Super Puppy" image="https://picsum.photos/800/440" />
+    <app-card title="Power Sisters" image="https://picsum.photos/800/440" />
+    <app-card title="Earth" image="https://picsum.photos/800/440" />
+  </app-slider>
+  <app-slider [componentFocused]="navigationService.trackFocusPosition('slider-02')">
     <app-card title="Shadow Hunter" image="https://picsum.photos/800/440" />
     <app-card title="Super Puppy" image="https://picsum.photos/800/440" />
     <app-card title="Power Sisters" image="https://picsum.photos/800/440" />
