--- a/app/globals.scss
+++ b/app/globals.scss
@@ -5,7 +5,7 @@
 @import 'assets/font/font.css';
 
 :root {
-  --background: #1A1C1E;
+  --background: #1a1c1e;
   --text: #FFFFFF;
   --gray: #444746;
   --jellyfin-gradient-start: #AA5CC3;
@@ -37,6 +37,9 @@ body {
   }
   .bg-radial-gradient {
     background-image: linear-gradient(208deg, transparent 0%, var(--background) 100%);
+  }
+  .bg-detail-gradient {
+    background: linear-gradient(45deg, var(--background) 20%, rgba(26, 28, 30, 0.95) 35%, rgba(26, 28, 30, 0.9) 40%, rgba(26, 28, 30, 0.8) 100%), linear-gradient(0deg, var(--background) 0%, rgba(26, 28, 30, 0) 35%);
   }
 }
 
