fix: a lot of ui and add hlc streaming support - wip

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -106,3 +106,12 @@ body {
   }
 }
 
+.invisible-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
